WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255674
[GLIB] Fix clang build (-Werror,-Wunused-lambda-capture)
https://bugs.webkit.org/show_bug.cgi?id=255674
Summary
[GLIB] Fix clang build (-Werror,-Wunused-lambda-capture)
Patrick Griffis
Reported
2023-04-19 13:22:13 PDT
/app/webkit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerDataChannelHandler.cpp:336:15: error: lambda capture 'this' is not used [-Werror,-Wunused-lambda-capture] postTask([this, client = m_client, bytes = GRefPtr<GBytes>(bytes)] { ^~~~~
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2023-04-19 13:22:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12930
EWS
Comment 2
2023-04-20 01:03:30 PDT
Committed
263166@main
(f4b8a8d64dd3): <
https://commits.webkit.org/263166@main
> Reviewed commits have been landed. Closing PR #12930 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug