[GLIB] Fix clang build (-Werror,-Wunused-lambda-capture) https://bugs.webkit.org/show_bug.cgi?id=255674

Reviewed by Michael Catanzaro.

Depending on the GStreamer version this fails to compile, just ensure `this` is
always used.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerDataChannelHandler.cpp:
(WebCore::GStreamerDataChannelHandler::onMessageData):

Canonical link: https://commits.webkit.org/263166@main